<resources>

    <string name="app_name">XYZ Reader</string>
    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_license">Licenses</string>

    <string name="list_error">Please check your internet connection.</string>

    <string name="list_item_error">No Image</string>

    <string name="butterKnife_title">Butter Knife</string>
    <string name="butterKnife_link">http://jakewharton.github.io/butterknife/</string>
    <string name="butterKnife_license">Copyright &#169; 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n<a href='http://www.apache.org/licenses/LICENSE-2.0'>http://www.apache.org/licenses/LICENSE-2.0</a>\n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>

    <string name="okhttp_title">OkHttp</string>
    <string name="okhttp_link">http://square.github.io/okhttp/</string>
    <string name="okhttp_license">Copyright &#169; 2016 Square, Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n<a href='http://www.apache.org/licenses/LICENSE-2.0'>http://www.apache.org/licenses/LICENSE-2.0</a>\n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>

    <string name="picasso_title">Picasso</string>
    <string name="picasso_link">http://square.github.io/picasso/</string>
    <string name="picasso_license">Copyright &#169; 2013 Square, Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n<a href='http://www.apache.org/licenses/LICENSE-2.0'>http://www.apache.org/licenses/LICENSE-2.0</a>\n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>

    <string name="pageSplitter_title">PageSplitter</string>
    <string name="pageSplitter_link">https://stackoverflow.com/questions/20204348/how-to-break-styled-text-into-pages-in-android</string>

</resources>
